0.0.1:
  - Initial public test version.
0.0.2:
  - New Command: /swa reload - reloads the config and language file.
  - New Permission: siegewar.command.siegewaradmin.reload - a child node of siegewar.command.siegewaradmin.*
  - Minimum Towny version bumped to 0.96.5.12.
  - Uses TownUnconquerEvent to prevent Towny de-occupying towns.
0.0.3:
  - Fix missing language strings: msg_err_no_money, msg_err_command_disable.
  - Fix revolt time showing in the /t status screen where it should be showing the immunity time.
0.0.4:
  - Fix PlayerDeaths that weren't directly caused by PVP not counting as deaths that allowed for inventories to be kept.
0.0.5:
  - Fix /ta town {name} toggle neutral altering the town's neutral status but not altering the backing metadata.