@@ -1,19 +1,19 @@
 package com.gmail.goosius.siegewar;
 
-import org.bukkit.Color;
+import com.palmergames.bukkit.util.Colors;
 import org.bukkit.command.CommandSender;
 
-import com.palmergames.bukkit.towny.object.Translation;
+import com.gmail.goosius.siegewar.settings.Translation;
 
 public class Messaging {
 
 	final static String prefix = Translation.of("plugin_prefix");
 	
 	public static void sendErrMessage(CommandSender sender, String message) {
-		sender.sendMessage(prefix + Color.RED + message);
+		sender.sendMessage(prefix + Colors.Red + message);
 	}
 
 	public static void sendMessage(CommandSender sender, String message) {
-		sender.sendMessage(prefix + Color.WHITE + message);
+		sender.sendMessage(prefix + Colors.White + message);
 	}
 }
